@@ -383,6 +383,13 @@ class GeSHi {
     var $line_numbers = GESHI_NO_LINE_NUMBERS;
 
     /**
+     * Flag to decide if multi line spans are allowed. Set it to false to make sure
+     * each tag is closed before and reopened after each linefeed.
+     * @var boolean
+     */
+    var $allow_multiline_span = true;
+
+    /**
      * The "nth" value for fancy line highlighting
      * @var int
      */
@@ -682,6 +689,29 @@ class GeSHi {
         }
         $this->line_numbers = $flag;
         $this->line_nth_row = $nth_row;
+    }
+
+    /**
+     * Sets wether spans and other HTML markup generated by GeSHi can
+     * span over multiple lines or not. Defaults to true to reduce overhead.
+     * Set it to false if you want to manipulate the output or manually display
+     * the code in an ordered list.
+     *
+     * @param boolean Wether multiline spans are allowed or not
+     * @since 1.0.7.22
+     */
+    function enable_multiline_span($flag) {
+        $this->allow_multiline_span = (bool) $flag;
+    }
+
+    /**
+     * Get current setting for multiline spans, see GeSHi::
+     *
+     * @see enable_multiline_span
+     * @return bool
+     */
+    function get_multiline_span() {
+        return $this->allow_multiline_span;
     }
 
     /**
@@ -1554,9 +1584,9 @@ class GeSHi {
         $hq_strlen = strlen($hq);
 
         //Preload if line numbers are to be generated afterwards
-        //TODO: Add a check if line breaks should be forced even without line numbers
+        //Added a check if line breaks should be forced even without line numbers, fixes SF#1727398
         $check_linenumbers = $this->line_numbers != GESHI_NO_LINE_NUMBERS
-                                || !empty($this->highlight_extra_lines);
+                                || !empty($this->highlight_extra_lines) || !$this->allow_multiline_span;
 
         //preload the escape char for faster checking ...
         $escaped_escape_char = GeSHi::hsc($this->language_data['ESCAPE_CHAR']);
